; ModuleID = '/home/carl/AnghaBench/linux/drivers/isdn/hardware/mISDN/extr_avmfritz.c___read_status_pci.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/isdn/hardware/mISDN/extr_avmfritz.c___read_status_pci.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVM_HDLC_2 = common dso_local global i32 0, align 4
@AVM_HDLC_1 = common dso_local global i32 0, align 4
@CHIP_INDEX = common dso_local global i64 0, align 8
@CHIP_WINDOW = common dso_local global i64 0, align 8
@HDLC_STATUS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32)* @__read_status_pci to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__read_status_pci(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp eq i32 %5, 2
  br i1 %6, label %7, label %9

7:                                                ; preds = %2
  %8 = load i32, i32* @AVM_HDLC_2, align 4
  br label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @AVM_HDLC_1, align 4
  br label %11

11:                                               ; preds = %9, %7
  %12 = phi i32 [ %8, %7 ], [ %10, %9 ]
  %13 = load i64, i64* %3, align 8
  %14 = load i64, i64* @CHIP_INDEX, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i32 @outl(i32 %12, i64 %15)
  %17 = load i64, i64* %3, align 8
  %18 = load i64, i64* @CHIP_WINDOW, align 8
  %19 = add nsw i64 %17, %18
  %20 = load i64, i64* @HDLC_STATUS, align 8
  %21 = add nsw i64 %19, %20
  %22 = call i32 @inl(i64 %21)
  ret i32 %22
}

declare dso_local i32 @outl(i32, i64) #1

declare dso_local i32 @inl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
